[package]
name = "exasol-pow-challenge"
version = "0.1.0"
edition = "2021"
description = "Protocol and proof-of-work implementation for the Exasol POW coding challenge"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/fredmorcos/exasol-pow-challenge"
repository = "https://github.com/fredmorcos/exasol-pow-challenge"
readme = "README.md"
keywords = ["exasol", "pow", "challenge", "hash", "random-string"]
categories = ["authentication", "command-line-utilities", "cryptography", "cryptography::cryptocurrencies", "network-programming"]

[lib]
name = "exasol"
path = "src/lib.rs"

[[bin]]
name = "exasol"
path = "src/main.rs"

[features]
stats = []

[dependencies]
env_logger = "0.8"
log = "0.4"
structopt = "0.3"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.1"
openssl = "0.10"
rand = "0.8"
rand_xoshiro = "0.6"
sha-1 = "0.9"
hex = "0.4"
parking_lot = "0.11"
rayon = "1.5"
either = "1.6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
incremental = false
debug = true
overflow-checks = false
panic = "abort"
